# humanboard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTION_AUDIT.md  README.md  build-app.sh
.cargo/: config.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  ROADMAP.md
homebrew/: README.md  humanboard.rb
src/: actions.rs  board.rs  board_index.rs  command_registry.rs  constants.rs  data_table.rs  hit_testing.rs  home.rs  landing.rs  lib.rs  main.rs  markdown_card.rs  notifications.rs  onboarding.rs  perf.rs  preview.rs  spatial_index.rs  types.rs
src/app/: board_management.rs  command_palette_handlers.rs  data_viz.rs  error_recovery.rs  lifecycle.rs  mod.rs  preview_core.rs  preview_panes.rs  preview_search.rs  preview_tabs.rs  preview_webviews.rs  settings_handlers.rs  state.rs  table_editing.rs  textbox.rs  types.rs
src/data/: chart_engine.rs  csv_parser.rs  error.rs  json_parser.rs  lazy_source.rs  mod.rs  table_delegate.rs
src/input/: coords.rs  drag.rs  mod.rs  mouse_down.rs  mouse_up.rs  state.rs  transform.rs
src/pdf/: document.rs  mod.rs  pdfium_loader.rs  thumbnail.rs
src/render/: canvas.rs  dock.rs  mod.rs  preview.rs
src/render/overlays/: chart_config.rs  command_palette.rs  create_board.rs  header.rs  header_palette.rs  mod.rs  modal_base.rs  settings.rs  shortcuts.rs
src/webviews/: audio.rs  mod.rs  range_utils.rs  video.rs  youtube.rs
tests/: board_tests.rs
tests/integration/: board_workflow_tests.rs  state_management_tests.rs
tests/it/: board.rs  helpers.rs  main.rs
tests/it/integration/: board_workflow_tests.rs  mod.rs  state_management_tests.rs  theming_tests.rs  undo_redo_tests.rs
tests/it/unit/: background_tests.rs  board_index_tests.rs  mod.rs  notifications_tests.rs  perf_tests.rs  settings_watcher_tests.rs  snapshot_tests.rs
tests/it/unit/snapshots/: it__unit__snapshot_tests__app_settings_default.snap.new  it__unit__snapshot_tests__arrow_head_arrow.snap  it__unit__snapshot_tests__arrow_head_circle.snap  it__unit__snapshot_tests__arrow_head_diamond.snap  it__unit__snapshot_tests__arrow_head_none.snap.new  it__unit__snapshot_tests__board_metadata.snap  it__unit__snapshot_tests__board_metadata_deleted.snap.new  it__unit__snapshot_tests__canvas_item_arrow.snap.new  it__unit__snapshot_tests__canvas_item_audio.snap.new  it__unit__snapshot_tests__canvas_item_chart.snap  it__unit__snapshot_tests__canvas_item_code.snap.new  it__unit__snapshot_tests__canvas_item_image.snap  it__unit__snapshot_tests__canvas_item_link.snap  it__unit__snapshot_tests__canvas_item_markdown.snap.new  it__unit__snapshot_tests__canvas_item_pdf.snap.new  it__unit__snapshot_tests__canvas_item_shape_ellipse.snap  it__unit__snapshot_tests__canvas_item_shape_rectangle.snap  it__unit__snapshot_tests__canvas_item_table.snap  it__unit__snapshot_tests__canvas_item_text.snap  it__unit__snapshot_tests__canvas_item_textbox.snap  it__unit__snapshot_tests__canvas_item_video.snap.new  it__unit__snapshot_tests__canvas_item_youtube.snap  it__unit__snapshot_tests__canvas_items_collection.snap  it__unit__snapshot_tests__chart_config_complex.snap  it__unit__snapshot_tests__chart_config_default.snap  it__unit__snapshot_tests__chart_type_area.snap  it__unit__snapshot_tests__chart_type_bar.snap  it__unit__snapshot_tests__chart_type_line.snap  it__unit__snapshot_tests__chart_type_pie.snap  it__unit__snapshot_tests__chart_type_scatter.snap  it__unit__snapshot_tests__data_cell_boolean_false.snap  it__unit__snapshot_tests__data_cell_boolean_true.snap  it__unit__snapshot_tests__data_cell_date.snap  it__unit__snapshot_tests__data_cell_empty.snap  it__unit__snapshot_tests__data_cell_number.snap  it__unit__snapshot_tests__data_cell_text.snap.new  it__unit__snapshot_tests__data_origin_api.snap  it__unit__snapshot_tests__data_origin_file_csv.snap  it__unit__snapshot_tests__data_origin_file_tsv.snap  it__unit__snapshot_tests__data_origin_json_no_path.snap  (+16 more)
tests/unit/: hit_testing_tests.rs
themes/: high-contrast.json
