[package]
name = "humanboard"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
gpui = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
image = "0.25"
gpui-component = { version = "0.5", features = [
  "webview",
  "tree-sitter-languages",
] }
wry = { version = "0.53.3", package = "lb-wry" }
raw-window-handle = "0.6"
pdfium-render = { version = "0.8", features = ["image"] }
tiny_http = "0.12"
pulldown-cmark = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
urlencoding = "2.1"
open = "5.0"
lofty = "0.18"

# Error handling and logging (Zed patterns)
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For once_cell patterns used by Zed
once_cell = "1.19"

# Faster mutex implementation (Zed pattern)
parking_lot = "0.12"

# Spatial indexing for efficient hit testing (R-tree)
rstar = "0.12"

# File watching for settings hot-reload
notify = "6.1"

# Secure temp file handling
tempfile = "3.10"

# High-performance dataframe for large CSV/JSON datasets
# Enables lazy evaluation and streaming for 100k+ row files
polars = { version = "0.46", default-features = false, features = [
    "lazy",           # Lazy evaluation - only compute what's needed
    "csv",            # CSV parsing
    "json",           # JSON parsing
    "streaming",      # Stream large files without loading all into memory
    "dtype-struct",   # Struct type support
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20.1"

# =============================================================================
# FEATURES
# =============================================================================
# cargo build --features profiling  -> Enable detailed performance profiling
# =============================================================================

[features]
default = []
# Enable detailed performance profiling instrumentation.
# This adds timing to hot paths (rendering, hit testing, input handling).
# Use for development/debugging only - has runtime overhead.
profiling = []

# =============================================================================
# BUILD PROFILES
# =============================================================================
# cargo build             -> dev (fast incremental builds)
# cargo build --profile dev-fast -> dev-fast (fastest iteration)
# cargo build --release   -> release (full optimization for distribution)
# =============================================================================

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.dev.package.gpui]
opt-level = 3

[profile.dev.package.gpui-component]
opt-level = 2

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.pdfium-render]
opt-level = 2

[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = false
codegen-units = 256

[profile.dev-fast.package."*"]
opt-level = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"


# =============================================================================
# TEST CONFIGURATION
# =============================================================================
# Single test binary following matklad's best practices:
# - Reduces linking overhead from 3x to 1x
# - All tests in tests/it/ compiled into one binary
# =============================================================================

[[test]]
name = "it"
path = "tests/it/main.rs"

[package.metadata.bundle]
name = "Humanboard"
identifier = "com.humancorp.humanboard"
# icon = ["assets/icon.icns"]  # or icon.png
version = "0.1.0"
copyright = "Copyright © 2025"
category = "Productivity"
short_description = "A moodboard app"
resources = ["assets", "themes", "lib"]

